<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_8sdp"
    android:background="@color/white"
    android:elevation="@dimen/_4sdp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="@dimen/_4sdp"
    app:cardUseCompatPadding="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <include
            android:id="@+id/loading_layout"
            layout="@layout/progress_loading" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:lines="1"
            android:text="@string/Loading"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/last_modified_on"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:lines="1"
            android:text="@string/Loading"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />


        <TextView
            android:id="@+id/currency_format"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:lines="1"
            android:text="@string/Loading"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_modified_on" />

        <TextView
            android:id="@+id/first_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:lines="1"
            android:text="@string/Loading"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currency_format" />

        <TextView
            android:id="@+id/last_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:lines="1"
            android:text="@string/Loading"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_month" />


        <TextView
            android:id="@+id/tv_accounts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:background="@drawable/rounded_view"
            android:drawablePadding="@dimen/_8sdp"
            android:lines="1"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/accounts"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_month"
            app:drawableStartCompat="@drawable/ic_accounts" />

        <TextView
            android:id="@+id/tv_payee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:background="@drawable/rounded_view"
            android:drawablePadding="@dimen/_8sdp"
            android:lines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/payee"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_month"
            app:drawableStartCompat="@drawable/ic_payee" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>